add_subdirectory(class_src)
add_subdirectory(conversion_operator)
add_subdirectory(func_pointer)
add_subdirectory(generic_algorithm)
add_subdirectory(keyword)
add_subdirectory(move_src)
add_subdirectory(preprocessor)
add_subdirectory(std_string)
add_subdirectory(stl_iterator)
add_subdirectory(STL_src)
add_subdirectory(type_transform)