# add_executable(SIZE_DEMO "size_demo.cpp")
# add_executable(MAX_SIZE_DEMO "max_size_demo.cpp")
# add_executable(RESIZE_DEMO "resize_demo.cpp")
# add_executable(CAPACITY_DEMO "capacity_demo.cpp")
# add_executable(RESERVE_DEMO "reserve_demo.cpp")
add_executable(SHRINK_TO_FIT_DEMO "shrink_to_fit_demo.cpp")