add_executable(RVALUE_DEMO_1 "rvalue_demo_1.cpp")
add_executable(MOVE_DEMO_1 "move_demo_1.cpp")
add_executable(VALUE_ARGUMENT_DEMO "value_argument_demo.cpp")
add_executable(RETURN_VALUE_DEMO "return_value_demo.cpp")
add_executable(CONST_REF_DEMO "const_ref_demo.cpp")
add_executable(FUNC_OVERLOAD_ORDER_DEMO "func_overload_order.cpp")